--- a/createAccount.html
+++ b/createAccount.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EntrGo</title>
-    <script src="main.js"></script>
+    <script src="/src/createAccount.js"></script>
     <link rel="stylesheet" href="main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,19 +20,19 @@
       <form action="submit" method="post" id="create-account-form" class="login-form">
         <div class="form-group">
           <label for="name" class="form-label">Nome:</label>
-          <input type="text" id="name" class="form-input" />
+          <input type="text" id="name" class="form-input" name="name" />
         </div>
         <div class="form-group">
           <label for="email" class="form-label">Email:</label>
-          <input type="email" id="Email" class="form-input" />
+          <input type="email" id="Email" class="form-input" name="email"/>
         </div>
         <div class="form-group">
           <label for="document" class="form-label">CPF: </label>
-          <input type="text" id="document" class="form-input" />
+          <input type="text" id="document" class="form-input" name="document"/>
         </div>
         <div class="form-group">
           <label for="address" class="form-label">Endereço:</label>
-          <input type="text" id="address" class="form-input" />
+          <input type="text" id="address" class="form-input" name="address"/>
         </div>
         <div class="form-group">
           <label for="telefone" class="form-label">Telefone:</label>
@@ -40,19 +40,19 @@
         </div>
         <div class="form-group">
           <label for="company" class="form-label">Nome da empresa:</label>
-          <input type="text" id="company" class="form-input" />
+          <input type="text" id="company" class="form-input" name="company"/>
         </div>
         <div class="form-group">
-          <label for="companyDocument" class="form-label"
+          <label for="companyDocument" class="form-label" 
             >CNPJ da empresa:</label
           >
-          <input type="text" name="" id="companyDocument" class="form-input" />
+          <input type="text" name="" id="companyDocument" class="form-input" name="companyDocument"/>
         </div>
         <button
           type="submit"
           class="login-button"
           id="login-button"
-          onclick="fazerLogin()"
+          onclick="createAccount()"
         >
           Entrar
         </button>
