--- a/createAccount.html
+++ b/createAccount.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EntrGo</title>
     <script src="/src/createAccount.js"></script>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="/assets/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,37 +16,48 @@
 
   <body>
     <div class="login-container">
-      <h1 class="login-title"> Cadastrar Conta</h1>
-      <form action="submit" method="post" id="create-account-form" class="login-form">
+      <h1 class="login-title">Cadastrar Conta</h1>
+      <form
+        action="submit"
+        method="post"
+        id="create-account-form"
+        class="login-form"
+      >
         <div class="form-group">
           <label for="name" class="form-label">Nome:</label>
           <input type="text" id="name" class="form-input" name="name" />
         </div>
         <div class="form-group">
           <label for="email" class="form-label">Email:</label>
-          <input type="email" id="Email" class="form-input" name="email"/>
+          <input type="email" id="Email" class="form-input" name="email" />
         </div>
         <div class="form-group">
           <label for="document" class="form-label">CPF: </label>
-          <input type="text" id="document" class="form-input" name="document"/>
+          <input type="text" id="document" class="form-input" name="document" />
         </div>
         <div class="form-group">
           <label for="address" class="form-label">Endereço:</label>
-          <input type="text" id="address" class="form-input" name="address"/>
+          <input type="text" id="address" class="form-input" name="address" />
         </div>
         <div class="form-group">
           <label for="telefone" class="form-label">Telefone:</label>
-          <input type="tel" name="telefone" id="telefone" class="form-input">
+          <input type="tel" name="telefone" id="telefone" class="form-input" />
         </div>
         <div class="form-group">
           <label for="company" class="form-label">Nome da empresa:</label>
-          <input type="text" id="company" class="form-input" name="company"/>
+          <input type="text" id="company" class="form-input" name="company" />
         </div>
         <div class="form-group">
-          <label for="companyDocument" class="form-label" 
+          <label for="companyDocument" class="form-label"
             >CNPJ da empresa:</label
           >
-          <input type="text" name="" id="companyDocument" class="form-input" name="companyDocument"/>
+          <input
+            type="text"
+            name=""
+            id="companyDocument"
+            class="form-input"
+            name="companyDocument"
+          />
         </div>
         <button
           type="submit"
